# Autonomous-FTE

./: .env  .env.example  .gitignore  API_DOCS.md  CEO_Briefing.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Project_Documentation.docx  QWEN.md  README.md  README_NICEGUI.md  analytics_tracker.py  app_nicegui_enhanced.py  cammand.md  debug_ai_service_direct.py  email_mcp_server.py  final_verification.py  full_setup.bat  gmail_watcher.py  main.py  orchestrator.py  pyproject.toml  requirements.txt  run_combined_system.py  run_daily_scheduler.py  scheduler_requirements.txt  setup_playwright_mcp.bat  setup_playwright_mcp.ps1  social_poster.py  social_poster_requirements.txt  start.bat  start.sh  test_fixes.py  test_functionality.py  test_scheduler.py  test_sender.py  watcher.py  whatsapp_automation.py  whatsapp_cli.py  whatsapp_watcher.py
.claude/: settings.local.json
.qwen/: settings.json  settings.json.orig
.qwen/agents/: expert-ui-ux-developer.md
.qwen/skills/: ui-ux-designer.md
AI_Employee_Vault/: Company_Handbook.md  Dashboard.md  SETUP_INSTRUCTIONS.md  gmail_credentials.json  task_processor.py  token.pickle  watcher.py
AI_Employee_Vault/.obsidian/: graph.json  workspace.json
AI_Employee_Vault/Done/: EMAIL_19d3ddbaefac4862.md  TASK_Boss_Request.txt.md  Task1.md  final_test.md  (+3 more)
Daily_AI_Posts/: 2026-02-08_ai_trending_post.md  2026-04-15_ai_trending_post.md
data/: analytics.json  contacts.json  latest_post.json  post_history.json
debug/: debug_ai_service.py  debug_ai_service_direct.py  debug_api_calls.py  debug_email.py  debug_service.py  debug_subprocess.py  debug_ui_logic.py  debug_whatsapp.py  debug_whatsapp_service.py
mcp-odoo-adv/: .env.example  .gitignore  CHANGELOG.md  COOKBOOK.md  Dockerfile  Dockerfile.http  Dockerfile.sse  LICENSE  NOTICE  README.md  USER_GUIDE.md  docker-compose.prod.yml  docker-compose.yml  fastmcp.json  odoo_config.json.example  pyproject.toml  run.py  run_server.py  run_server_http.py  run_server_sse.py
mcp-odoo-adv/DOCS/: DOCKER.md  SECURITY.md  STREAMINGHTTP_GUIDE.md  TRANSPORTS.md
mcp-odoo-adv/src/odoo_mcp/: __init__.py  odoo_client.py  server.py
obsolete/: app.py  app_nicegui.py  compare_modes.py  minimal_ui_test.py  simple_whatsapp_sender.py  simulate_streamlit_context.py  whatsapp_sender_demo.py
scripts/: demo.py  run_combined_system.py  run_daily_scheduler.py  run_sender.py  setup.py
src/: __init__.py  analytics_tracker.py  app_nicegui_enhanced.py  combined_scheduler.py  daily_ai_scheduler.py  gmail_watcher.py  social_poster.py  utils.py  whatsapp_sender.py
tests/: final_verification.py  simple_test.py  test_api_connectivity.py  test_combined.py  test_fixes.py  test_functionality.py  test_scheduler.py  test_sender.py  test_whatsapp_automation.py
(+28 files in other folders)
