[project]
name = "social-media-ai-employee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "nicegui>=3.10.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "beautifulsoup4>=4.9.0",
    "markdown>=3.3.0",
    "schedule>=1.2.0",
    "streamlit",
]
