[project]
name = "social-media-ai-employee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "nicegui>=3.10.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "beautifulsoup4>=4.9.0",
    "markdown>=3.3.0",
    "schedule>=1.2.0",
    "streamlit",
    "upload-post>=2.1.1",
    "playwright>=1.58.0",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-auth-oauthlib>=1.3.1",
]
